test/conformance/chainsaw/mutating-policies/reporting/mutate-existing-background-policy-report/deployments.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: applyconfiguration 
---
kind: Namespace
apiVersion: v1
metadata:
  name: applyconfiguration-non-mutated
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-deploy-1
  namespace: applyconfiguration-non-mutated
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-deploy-2
  namespace: applyconfiguration
  labels:
    tier: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
