test/conformance/chainsaw/mutating-policies/reporting/mutate-existing-background-policy-report/policy.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: MutatingPolicy
metadata:
  name: test-mpol-applyconfiguration
spec:
  evaluation:
    admission:
      enabled: false
    mutateExisting:
      enabled: true
  matchConstraints:
    resourceRules:
    - apiGroups: [ "apps" ]
      apiVersions: [ "v1" ]
      operations: [ "CREATE" , "UPDATE"]
      resources: [ "deployments" ]
  matchConditions:
  - name: is-applyconfiguration-namespace
    expression: object.metadata.namespace == 'applyconfiguration'
  mutations:
  - patchType: ApplyConfiguration
    applyConfiguration:
      expression: >
        Object{
          metadata: Object.metadata{
            labels: Object.metadata.labels{
              foo: "bar"
            }
          }
        }
