test/conformance/chainsaw/mutating-policies/reporting/mutate-existing-background-policy-report/report.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  namespace: applyconfiguration
  ownerReferences:
  - apiVersion: apps/v1
    kind: Deployment
    name: dev-deploy-2
results:
- message: pass
  policy: test-mpol-applyconfiguration
  properties:
    process: background scan
  result: pass
  scored: true
  source: KyvernoMutatingPolicy
scope:
  apiVersion: apps/v1
  kind: Deployment
  name: dev-deploy-2
  namespace: applyconfiguration
summary:
  error: 0
  fail: 0
  pass: 1
  skip: 0
  warn: 0
---
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  namespace: applyconfiguration-non-mutated
  ownerReferences:
  - apiVersion: apps/v1
    kind: Deployment
    name: dev-deploy-1
results:
- message: skip
  policy: test-mpol-applyconfiguration
  properties:
    process: background scan
  result: skip
  scored: true
  source: KyvernoMutatingPolicy
scope:
  apiVersion: apps/v1
  kind: Deployment
  name: dev-deploy-1
summary:
  error: 0
  fail: 0
  pass: 0
  skip: 1
  warn: 0
