test/conformance/chainsaw/mutating-policies/reporting/mutate-existing-background-policy-report/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: background-reporting-mutate-existing
spec:
  steps:
  - name: create-deployments
    try:
    - create:
        file: deployments.yaml
    - assert:
        file: deployments.yaml
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-mutating-policy-ready
    use:
      template: ../../../_step-templates/mutating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: test-mpol-applyconfiguration
  - name: sleep
    try:
    - sleep:
        duration: 10s
  - name: check mutation
    try:
    - assert:
        file: deployments-assert.yaml
  - name: check reports
    try:
    - assert: 
        file: report.yaml
